--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,18 @@
             <version>2.3.2.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.3.2.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
+            <version>2.3.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
