--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialec
 
 #Google authenticate
 security.oauth2.client.clientId=490375770165-obnvm3akeun5l3h46u7is9qr8i7b45ln.apps.googleusercontent.com
-security.oauth2.client.clientSecret=io1RrEf3ZKGXTj-7mU49vx9f
+security.oauth2.client.clientSecret=${clientSecret}
 security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
 security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
 security.oauth2.client.clientAuthenticationScheme=form
 security.oauth2.client.scope=openid,email,profile
 security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
 security.oauth2.resource.preferTokenInfo=true
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
+spring.session.jdbc.schema=classpath:session_tables.sql
