--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
     "@stomp/stompjs": "^5.4.4",
     "css-loader": "^1.0.1",
     "sockjs-client": "^1.5.0",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1",
-    "vuetify": "^2.3.9"
+    "vuetify": "^2.3.9",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
